--- a/style.css
+++ b/style.css
@@ -123,3 +123,60 @@ section.section2 {
   width: 600px !important;
   height: 400px !important;
 }
+
+@media (max-width: 768px) {
+  .wrapper, .bySide {
+      flex-direction: column;
+      gap: 20px;
+  }
+
+  .layer h1 {
+      font-size: 6em;
+  }
+
+  .layer h2 {
+      font-size: 1.5em;
+  }
+
+  .show {
+      grid-template-columns: 1fr;
+  }
+
+  img.gambar{
+    height: 140px;
+  }
+
+  .form-group input, 
+  .form-group textarea {
+      font-size: 14px;
+  }
+
+  .form-group button {
+      font-size: 14px;
+      padding: 8px 16px;
+  }
+}
+
+
+@media (max-width: 480px) {
+  .layer h1 {
+      font-size: 4em;
+  }
+
+  .layer h2 {
+      font-size: 1.2em;
+  }
+  .image.gambar{
+    height: 100px;
+  }
+
+  .form-group input, 
+  .form-group textarea {
+      font-size: 12px;
+  }
+
+  .form-group button {
+      font-size: 12px;
+      padding: 6px 12px;
+  }
+}
